projekt simply-chocolate rozpoczęcie pracy

--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@
     <!-- ============================== Hero ============================== -->
     <!-- ============================== Hero ============================== -->
 
+    <section class="hero-section background-image-section">
+        <div class="container">
+            <h1 class="visually-hidden">hero</h1>
+            <h2 class="sub-headline-hero"></h2>
+            <div class="modal-and-link-button">
+                <div class="modal-button-first-line">
+                    <button data-modal-open type="button" class="buy-now-button">Buy now</button>
+                    <button class="how-it-is-made-button"><a href="">How it’s made</a></button>
+                </div>
+                <button class="scroll-down-button"><a href="">scroll down</a></button>
+            </div>
+        </div>
+    </section>
+
 
 
 
@@ -148,24 +162,24 @@
 
 
 
-    <!-- ============================== Modal Window - Buy now ============================== -->
-    <!-- ============================== Modal Window - Buy now ============================== -->
-    <!-- ============================== Modal Window - Buy now ============================== -->
+    <!-- ========================= Modal Window - Buy now ========================= -->
+    <!-- ========================= Modal Window - Buy now ========================= -->
+    <!-- ========================= Modal Window - Buy now ========================= -->
 
 
 
 
-    <!-- ============================== Modal Window - Leave a review about our chocolate ============================== -->
-    <!-- ============================== Modal Window - Leave a review about our chocolate ============================== -->
-    <!-- ============================== Modal Window - Leave a review about our chocolate ============================== -->
+    <!-- ========================= Modal Window - Leave a review about our chocolate ==================== -->
+    <!-- ========================= Modal Window - Leave a review about our chocolate ==================== -->
+    <!-- ========================= Modal Window - Leave a review about our chocolate ==================== -->
 
 
 
 
 
-    <!-- ============================== Modal Window - Explore our new chocolate first ============================== -->
-    <!-- ============================== Modal Window - Explore our new chocolate first ============================== -->
-    <!-- ============================== Modal Window - Explore our new chocolate first ============================== -->
+    <!-- ========================= Modal Window - Explore our new chocolate first ==================== -->
+    <!-- ========================= Modal Window - Explore our new chocolate first ==================== -->
+    <!-- ========================= Modal Window - Explore our new chocolate first ==================== -->
 
 
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
