projekt simply-chocolate praca 01

--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
         <div>
             <nav>
                 <ul class="navigation-page list">
-                    <li class="navigation-anchor">Home</li>
-                    <li class="navigation-anchor">How it’s made?</li>
-                    <li class="navigation-anchor">Our products</li>
-                    <li class="navigation-anchor">Top sellers</li>
-                    <li class="navigation-anchor">Chocolate is loved</li>
+                    <li class="navigation-anchor"><a href="#home" class="navigation-page-link link">Home</a></li>
+                    <li class="navigation-anchor"><a href="#how-made" class="navigation-page-link link">How it’s made?</a></li>
+                    <li class="navigation-anchor"><a href="#our-products" class="navigation-page-link link">Our products</a></li>
+                    <li class="navigation-anchor"><a href="#top-sellers" class="navigation-page-link link">Top sellers</a></li>
+                    <li class="navigation-anchor"><a href="#chocolate-loved" class="navigation-page-link link">Chocolate is loved</a></li>
                 </ul>
             </nav>
         </div>
         <div class="socials-media-header">
             <ul class="list-socials-media-header">
-                <li class="social-media-header"><a class="socials-link header-socials-link" href="#">
+                <li class="social-media-header"><a class="socials-link header-socials-link" href="#" target="_blank" rel="noreferrer noopener">
                     <svg width="24" height="24" class="socials-icon-box-header">
                         <use href="./icons/icons.svg#icon-instagram"></use>
                     </svg></a>
                 </li>
                 <li class="social-media-header">
-                    <a class="socials-link header-socials-link" href="#">
+                    <a class="socials-link header-socials-link" href="#" target="_blank" rel="noreferrer noopener">
                         <svg width="24" height="24" class="socials-icon-box-header">
                             <use href="./icons/icons.svg#icon-twitter"></use>
                         </svg></a>
@@ -70,15 +70,15 @@
     <!-- ============================== Hero ============================== -->
 
     <section class="hero-section background-image-section">
-        <div class="container">
+        <div class="hero-container container">
             <h1 class="visually-hidden">hero</h1>
-            <h2 class="sub-headline-hero"></h2>
+            <h2 class="sub-headline-hero">Treat yourself or a loved one to our finest ingredients for a moment of pure delight!</h2>
             <div class="modal-and-link-button">
                 <div class="modal-button-first-line">
                     <button data-modal-open type="button" class="buy-now-button">Buy now</button>
-                    <button class="how-it-is-made-button"><a href="">How it’s made</a></button>
+                    <button class="how-it-is-made-button"><a href="#how-made" class="link-made-button link">How it’s made</a></button>
                 </div>
-                <button class="scroll-down-button"><a href="">scroll down</a></button>
+                <button class="scroll-down-button"><a href="#footer" class="link-scroll link">scroll down</a></button>
             </div>
         </div>
     </section>
