projekt simply-chocolate praca 02

--- a/index.html
+++ b/index.html
@@ -78,9 +78,15 @@
                     <button data-modal-open type="button" class="buy-now-button">Buy now</button>
                     <button class="how-it-is-made-button"><a href="#how-made" class="link-made-button link">How it’s made</a></button>
                 </div>
-                <button class="scroll-down-button"><a href="#footer" class="link-scroll link">scroll down</a></button>
+                           
+                <div class="scroll-button-box">
+                    <a href="#footer" class="link-scroll link">scroll down</a>
+                    <button class="scroll-down-button">
+                        <svg width="8" height="8" class="button-scroll-icon">
+                            <use href="./icons/icons.svg#icon-button-close"></use></svg>
+                    </button>
+                </div>
             </div>
-        </div>
     </section>
 
 
