projekt simply-chocolate praca-05

--- a/index.html
+++ b/index.html
@@ -23,39 +23,39 @@
     <!-- ============================== Header ============================== -->
     <!-- ============================== Header ============================== -->
 
-    <header class="page-header">
+    <header class="header-page">
         <div>
-            <a href="./index.html" class="navigation-logo link"><span class="logo-span">SIMPLY</span> CHOCOLATE</a>
+            <a href="./index.html" class="header-navigation-logo link"><span class="header-logo-span">SIMPLY</span> CHOCOLATE</a>
         </div>
         <div>
             <nav>
-                <ul class="navigation-page list">
-                    <li class="navigation-anchor"><a href="#home" class="navigation-page-link link">Home</a></li>
-                    <li class="navigation-anchor"><a href="#how-made" class="navigation-page-link link">How it’s made?</a></li>
-                    <li class="navigation-anchor"><a href="#our-products" class="navigation-page-link link">Our products</a></li>
-                    <li class="navigation-anchor"><a href="#top-sellers" class="navigation-page-link link">Top sellers</a></li>
-                    <li class="navigation-anchor"><a href="#chocolate-loved" class="navigation-page-link link">Chocolate is loved</a></li>
+                <ul class="header-navigation-page list">
+                    <li class="header-navigation-anchor"><a href="#home" class="header-navigation-page-link link">Home</a></li>
+                    <li class="header-navigation-anchor"><a href="#how-made" class="header-navigation-page-link link">How it's made?</a></li>
+                    <li class="header-navigation-anchor"><a href="#our-products" class="header-navigation-page-link link">Our products</a></li>
+                    <li class="header-navigation-anchor"><a href="#top-sellers" class="header-navigation-page-link link">Top sellers</a></li>
+                    <li class="header-navigation-anchor"><a href="#chocolate-loved" class="header-navigation-page-link link">Chocolate is loved</a></li>
                 </ul>
             </nav>
         </div>
-        <div class="socials-media-header">
-            <ul class="list-socials-media-header">
-                <li class="social-media-header"><a class="socials-link header-socials-link" href="#" target="_blank" rel="noreferrer noopener">
-                    <svg width="24" height="24" class="socials-icon-box-header">
+        <div class="header-socials-media">
+            <ul class="header-list-socials-media">
+                <li class="header-social-media"><a class="socials-link header-socials-link" href="#" target="_blank" rel="noreferrer noopener">
+                    <svg width="24" height="24" class="header-socials-icon-box">
                         <use href="./icons/icons.svg#icon-instagram"></use>
                     </svg></a>
                 </li>
-                <li class="social-media-header">
+                <li class="header-social-media">
                     <a class="socials-link header-socials-link" href="#" target="_blank" rel="noreferrer noopener">
-                        <svg width="24" height="24" class="socials-icon-box-header">
+                        <svg width="24" height="24" class="header-socials-icon-box">
                             <use href="./icons/icons.svg#icon-twitter"></use>
                         </svg></a>
                 </li>
             </ul>
         </div>
-        <div class="menu-button-container">
-            <button aria-expanded="false" aria-controls="mobile-menu" class="mobile-button-menu-ham js-open-menu">
-                <svg width="28" height="28" class="button-ham-menu-icon">
+        <div class="header-menu-button-container">
+            <button aria-expanded="false" aria-controls="mobile-menu" class="header-mobile-button-menu-ham js-open-menu">
+                <svg width="28" height="28" class="header-button-ham-menu-icon">
                     <use href="./icons/icons.svg#icon-hamburger"></use>
                 </svg>
             </button>
@@ -72,17 +72,17 @@
     <section class="hero-section background-image-section">
         <div class="hero-container container">
             <h1 class="visually-hidden">hero</h1>
-            <h2 class="sub-headline-hero">Treat yourself or a loved one to our finest ingredients for a moment of pure delight!</h2>
-            <div class="modal-and-link-button">
-                <div class="modal-button-first-line">
-                    <button data-modal-open type="button" class="buy-now-button">Buy now</button>
-                    <button class="how-it-is-made-button"><a href="#how-made" class="link-made-button link">How it’s made</a></button>
+            <h2 class="hero-sub-headline">Treat yourself or a loved one to our finest ingredients for a moment of pure delight!</h2>
+            <div class="hero-modal-and-link-button">
+                <div class="hero-modal-button-first-line">
+                    <button data-modal-open type="button" class="hero-buy-now-button">Buy now</button>
+                    <button class="hero-how-it-is-made-button"><a href="#how-made" class="hero-link-made-button link">How it's made</a></button>
                 </div>
                            
-                <div class="scroll-button-box">
-                    <a href="#footer" class="link-scroll link">scroll down</a>
-                    <button class="scroll-down-button">
-                        <svg width="8" height="8" class="button-scroll-icon">
+                <div class="hero-scroll-button-box">
+                    <a href="#footer" class="hero-link-scroll link">scroll down</a>
+                    <button class="hero-scroll-down-button">
+                        <svg width="8" height="8" class="hero-button-scroll-icon">
                             <use href="./icons/icons.svg#icon-button-close"></use></svg>
                     </button>
                 </div>
@@ -105,20 +105,20 @@
             <ul class="advantages-page-list list">
                 <li class="advantages-point-list">
                     <div class="advantages-text-box">
-                        <h3 class="sub-headline-advantages">Unsurpassed taste</h3>
-                        <p class="paragraph-advantages">Crafted with the finest quality cocoa beans and a dedication to perfection, each bite is a decadent experience that simply cannot be matched. Savor the richness and complexity of our Unsurpassed Taste and discover a new level of chocolate bliss.</p>
+                        <h3 class="advantages-sub-headline">Unsurpassed taste</h3>
+                        <p class="advantages-paragraph">Crafted with the finest quality cocoa beans and a dedication to perfection, each bite is a decadent experience that simply cannot be matched. Savor the richness and complexity of our Unsurpassed Taste and discover a new level of chocolate bliss.</p>
                     </div>
                 </li>
                 <li class="advantages-point-list">
                     <div class="advantages-text-box">
-                        <h3 class="sub-headline-advantages">Affordable price</h3>
-                        <p class="paragraph-advantages">Indulge in high-quality chocolate without breaking the bank with Simply Chocolate's selection of affordable treats. Enjoy mouth-watering truffles and velvety chocolate bars without sacrificing taste or quality. Browse our selection and indulge in affordable luxury today.</p>
+                        <h3 class="advantages-sub-headline">Affordable price</h3>
+                        <p class="advantages-paragraph">Indulge in high-quality chocolate without breaking the bank with Simply Chocolate's selection of affordable treats. Enjoy mouth-watering truffles and velvety chocolate bars without sacrificing taste or quality. Browse our selection and indulge in affordable luxury today.</p>
                     </div>
                 </li>
                 <li class="advantages-point-list">
                     <div class="advantages-text-box">
-                        <h3 class="sub-headline-advantages">Own production</h3>
-                        <p class="paragraph-advantages">We take pride in our own production process, ensuring that every step is carefully crafted to perfection. From selecting the finest ingredients to handcrafting each piece, our attention to detail is evident in every bite.</p>
+                        <h3 class="advantages-sub-headline">Own production</h3>
+                        <p class="advantages-paragraph">We take pride in our own production process, ensuring that every step is carefully crafted to perfection. From selecting the finest ingredients to handcrafting each piece, our attention to detail is evident in every bite.</p>
                     </div>
                 </li>
             </ul>
@@ -137,11 +137,11 @@
 
 
 
-    <!-- ============================== How it’s made? ============================== -->
-    <!-- ============================== How it’s made? ============================== -->
-    <!-- ============================== How it’s made? ============================== -->
-    <!-- ============================== How it’s made? ============================== -->
-    <!-- ============================== How it’s made? ============================== -->
+    <!-- ============================== How it's made? ============================== -->
+    <!-- ============================== How it's made? ============================== -->
+    <!-- ============================== How it's made? ============================== -->
+    <!-- ============================== How it's made? ============================== -->
+    <!-- ============================== How it's made? ============================== -->
 
 
 
